# fractol

./: CMakeLists.txt  Makefile  close.c  fractol.h  image.c  main.c
